--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,12 @@
 body,
+
+body{
+    background-image: url('img/bg.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
 html {
     margin: 0;
     padding: 0;
